feat: add built-in client user management
